# freecad-ai

./: .env.sample  .gitignore  LICENSE.md  README.md  api_spec.yaml  build-cpu.sh  build-start-cpu-profile.sh  build-start-test-profile.sh  build-test.sh  collect-logs.sh  docker-compose.gpu.override.yml  docker-compose.test-override.yml  docker-compose.yml  pytest.ini  rag_sources.yaml
docs/: FreeCAD-AI_Technical_Documentation.docx  api_samples.md  architecture.drawio  cad-agent-cli-readme.md  docker-readme.md  docs_FreeCAD_AI_Technical_Overview.docx  failure_modes.md  freecad-ai-detailed-playbook.docx  llm-state-management.md  minio-readme.md  models-sources.md  operational_runbook.md  rest-api-readme.md  testing.md  web-ui-quick-start.dml  web-ui-readme.md
services/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.docker.txt
services/api/alembic/: README  alembic.ini  env.py
services/api/alembic/versions/: 0001_init.py  0001_init_star_schema.py  0002_validation_taxonomy.py  0003_job_runs.py
services/api/app/: db.py  embeddings.py  main.py  models.py  queue.py  schemas.py  settings.py  storage.py  utils.py
services/api/app/routes/: __init__.py  artifacts.py  health.py  internal_jobs.py  jobs.py  logs.py  rag.py  sessions.py
services/api/app/tests/: conftest.py  test_api.py  test_health.py
services/api/cad_agent_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: Dockerfile.test-runner  pytest.ini  requirements.txt  test_pyzip.py  test_rag_sources_config.py  test_retry_limit_config.py
tools/: Dockerfile.fake-llm  __init__.py  utils.py  (+9 more)
(+110 files in other folders)
